# RASPing

./: README.md  TracrTesting.ipynb  TracrTesting2.ipynb  basicFunctionTests.ipynb  changeLog.md  changeLog.txt  container.def  demo.ipynb  modelTraining.ipynb  pyproject.toml  rasp.py  requirements.txt  tempShowcasingNotebook.ipynb  testingRASPy.ipynb
.github/workflows/: tests.yml
PerformanceTesting/: overTraining.ipynb  runOvertraining.py  runScripts.sh  testing.ipynb
PerformanceTesting/savedData/: hist_13from0.0002-0.05_11avg  hist_13from0.0002-0.05_11avg_v2  hist_13from0.0002-0.05_11avg_v3  most-freq_13from0.0002-0.05_11avg  reverse_13from0.0002-0.05_11avg_v2  reverse_5from0.0002-0.05_11avg  sort_13from0.0002-0.05_11avg  sort_13from0.0002-0.05_11avg_v2  temp
data/: hist_test.jsonl  hist_train.jsonl  hist_val.jsonl  most-freq_test.jsonl  most-freq_train.jsonl  most-freq_val.jsonl  reverse_test.jsonl  reverse_val.jsonl  shuffle_dyck1_test.jsonl  shuffle_dyck1_train.jsonl  shuffle_dyck1_val.jsonl  shuffle_dyck2_test.jsonl  shuffle_dyck2_train.jsonl  shuffle_dyck2_val.jsonl  sort_test.jsonl  sort_train.jsonl  sort_val.jsonl
experiments/llm_patches/: evaluate_patches.py  evaluation_results.json  generate_patches.py  prompts.py
scripts/: generate_all_data.py  generate_data.py
src/: Model.py  analyze_dyck.py  early_stopping.py  functions.py  generators.py  jsonl.py  loss.py  model.py  reinforcement_trainer.py  rewards.py  trainer.py
tests/: test_functions.py  test_generators.py
training/: tracr.ipynb  tracr_new.ipynb  tracr_new_Model_class_implementation.ipynb
(+34982 files in other folders)
