[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "differentiable-program-repair"
version = "0.1.0"
description = "RASPing project for program analysis"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src", "tests", "experiments", "scripts"]